--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,3 +2,8 @@
     color: white;
     background-image: url("/images/300-sl-alternative-energy-blue-sky-371900.jpg");
     background-size: cover;}
+
+#map {
+    height: 400px;  /* The height is 400 pixels */
+    width: 100%;  /* The width is the width of the web page */
+}
