added phone input support

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@ body {
 
 .jumbotron {
     color: white;
-    background-image: url("/images/background-2734804__340.jpg ");
+    background-image: url("/img/background-2734804__340.jpg ");
     background-size: cover;}
 
 #map {
@@ -25,4 +25,10 @@ th a:hover{
 a:hover{
     text-decoration: none !important;
     color: white;
+}
+
+.iti-flag {background-image: url("/img/flags.png");}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+    .iti-flag {background-image: url("/img/flags@2x.png");}
 }
